--- a/src/shared/pages/index-page/hero/styles.module.css
+++ b/src/shared/pages/index-page/hero/styles.module.css
@@ -31,6 +31,11 @@
   margin-left: 12px;
 }
 
+.logo-wrapper {
+  display: flex;
+  gap: 24px;
+}
+
 @media (min-width: 640px) {
   .root {
     flex-direction: row;
